modeling added to todoMVC

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <script type="text/x-handlebars" data-template-name="todos">
+
     <section id="todoapp">
       <header id="header">
         <h1>todos</h1>
@@ -56,9 +58,12 @@
     <footer id="info">
       <p>Double-click to edit a todo</p>
     </footer>
+    </script>
+
   </body>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/handlebars/handlebars.min.js"></script>
     <script src="bower_components/ember/ember.min.js"></script>
     <script src="bower_components/ember-data/ember-data.min.js"></script>
+    <script src="0112/app.js"></script>
 </html>
