--- a/index.html
+++ b/index.html
@@ -2,68 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Ember.js • TodoMVC</title>
+    <title>Ember.js </title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <script type="text/x-handlebars" data-template-name="todos">
+   </script>
+	
 
-    <section id="todoapp">
-      <header id="header">
-        <h1>todos</h1>
-        <input type="text" id="new-todo" placeholder="What needs to be done?" />
-      </header>
+   <header>
+       <h1>Dex's Blog</h1>
+   </header>
 
-      <section id="main">
-        <ul id="todo-list">
-          <li class="completed">
-            <input type="checkbox" class="toggle">
-            <label>Learn Ember.js</label><button class="destroy"></button>
-          </li>
-          <li>
-            <input type="checkbox" class="toggle">
-            <label>...</label><button class="destroy"></button>
-          </li>
-          <li>
-            <input type="checkbox" class="toggle">
-            <label>Profit!</label><button class="destroy"></button>
-          </li>
-        </ul>
+   <div>
+	   {{outlet}}
+   </div>
 
-        <input type="checkbox" id="toggle-all">
-      </section>
+   <footer>
+        &copy;2015 Degi's Publishing, Inc.
+   </footer>
 
-      <footer id="footer">
-        <span id="todo-count">
-          <strong>2</strong> todos left
-        </span>
-        <ul id="filters">
-          <li>
-            <a href="all" class="selected">All</a>
-          </li>
-          <li>
-            <a href="active">Active</a>
-          </li>
-          <li>
-            <a href="completed">Completed</a>
-          </li>
-        </ul>
-
-        <button id="clear-completed">
-          Clear completed (1)
-        </button>
-      </footer>
-    </section>
-
-    <footer id="info">
-      <p>Double-click to edit a todo</p>
-    </footer>
-    </script>
-
-  </body>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/handlebars/handlebars.min.js"></script>
     <script src="bower_components/ember/ember.min.js"></script>
-    <script src="bower_components/ember-data/ember-data.min.js"></script>
-    <script src="0116/app.js"></script>
+    <script src="0117/app.js"></script>
+  </body>
 </html>
